apps/java-app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-camel-service
  namespace: hello-camel-service
  labels:
    app: hello-camel-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-camel-service
  template:
    metadata:
      labels:
        app: hello-camel-service
    spec:
      containers:
        - name: hello-camel-service
          image: 10.137.160.1:3000/rpamu/hello-camel-service:1.0.0
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
