apps/java-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-camel-service
  namespace: hello-camel-service
spec:
  selector:
    app: hello-camel-service
  ports:
    - port: 80
      targetPort: http
  type: ClusterIP
